--- a/projectcars/src/styles/main.css
+++ b/projectcars/src/styles/main.css
@@ -93,7 +93,7 @@ body {
 }
 
 .main-block__right-img {
-	background: url(../src/img/tire.png) no-repeat;
+	background: url(../../src/img/tire.png) no-repeat;
 	width: 350px;
 	height: 300px;
 }
